--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.3.4"
   },
   "devDependencies": {
-    "@types/node": "^15.12.5"
+    "@types/node": "^15.12.5",
+    "ts-node": "^10.9.1"
   }
 }
